--- a/adoptar.css
+++ b/adoptar.css
@@ -1,11 +1,21 @@
 body {
-    margin: 50px;
-    /* Espacio alrededor de toda la página */
-    background-color: #f4f4fc;
-    /* Color de fondo*/
+    margin: 50px; /* Espacio alrededor de toda la página */
+    font-family: Arial, sans-serif;
+    background-color: #fbffdf; /* Color de fondo*/
+    width:1000px;
+    margin:50px auto;
+}
+
+p{
+    text-align: center; /* Centra el texto horizontalmente */
 }
 
 h1 {
-    font-family: 'Montserrat', sans-serif;
+    text-align: center; /* Centra el texto horizontalmente */
+    font-family: 'Georgia', serif;
+    font-size: 3em;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    line-height: 1.5;
 }
-
