--- a/voluntariado.css
+++ b/voluntariado.css
@@ -1,42 +1,71 @@
 body {
-    margin: 50px; /* Espacio alrededor de toda la página */
-    background-color: #f4f4fc; /* Color de fondo*/
+  margin: 50px;
+  /* Espacio alrededor de toda la página */
+  font-family: Arial, sans-serif;
+  background-color: #f4f4fc;
+  /* Color de fondo*/
+  width: 1000px;
+  margin: 50px auto;
+}
+
+h1 {
+  text-align: center;
+  /* Centra el texto horizontalmente */
+  font-family: 'Georgia', serif;
+  font-size: 3em;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  line-height: 1.5;
+}
+
+p {
+  text-align: center;
+  /* Centra el texto horizontalmente */
 }
 
 
 
-/* ARIA */
-.annotate {
-    font-style: italic;
-    color: #366ed4;
-  }
+    /* ARIA */
+    .annotate {
+      font-style: italic;
+      color: #366ed4;
+    }
 
-  [role="table"] {
-    display: table;
-  }
+    [role="table"] {
+      display: table;
+      margin: 0 auto; /* Si solo quieres centrar horizontalmente */
+    }
 
-  [role="table"] > div[id] {
-    display: table-caption;
-    font-style: italic;
-  }
+    [role="table"] > div[id] {
+      display: table-caption;
+     /* font-style: italic;*/
+    }
 
-  [role="table"] [role="row"] {
-    display: table-row;
-  }
+    [role="table"] [role="row"] {
+      display: table-row;
+    }
 
-  [role="table"] [role="cell"],
-  [role="table"] [role="columnheader"] {
-    display: table-cell;
-    padding: 0.125em 0.25em;
-    width: 8em;
-  }
+    [role="table"] [role="cell"],
+    [role="table"] [role="columnheader"] {
+      display: table-cell;
+      padding: 0.125em 0.25em;
+      width: 8em;
+    }
 
-  [role="table"] [role="columnheader"] {
-    font-weight: bold;
-    border-bottom: thin solid #888;
-  }
+    [role="table"] [role="columnheader"] {
+      font-weight: bold;
+      border-bottom: thin solid #888;
+    }
 
-  [role="table"] [role="rowgroup"]:last-child [role="row"]:nth-child(odd) {
-    background-color: #ddd;
-  }
-  /* ARIA */
+    [role="table"] [role="rowgroup"]:last-child [role="row"]:nth-child(odd) {
+      background-color: #ddd;
+    }
+
+    /* Contenedor para centrar la tabla */
+    .table-container {
+      display: flex;
+      justify-content: center; /* Centrar horizontalmente */
+      align-items: center; /* Centrar verticalmente */
+      height: 100vh; /* Ocupar toda la pantalla */
+    }
